@@ -52,3 +52,4 @@ class CONST():
     CACHE = False
     SRT = False
     CC = False
+    DEBUG = False
