@@ -17,8 +17,6 @@
 
 '''
 
-#debugging
-import hashlib
 
 
 from BaseHTTPServer import BaseHTTPRequestHandler,HTTPServer
@@ -32,6 +30,14 @@ import sys
 import constants
 from resources.lib import default
 from resources.libgui import xbmcplugin
+
+
+if constants.CONST.DEBUG:
+
+    #debugging
+    import hashlib
+
+
 
 class ThreadedWebGUIServer(ThreadingMixIn, HTTPServer):
     """Handle requests in a separate thread."""
@@ -323,7 +329,6 @@ class webGUI(BaseHTTPRequestHandler):
 
             endOffset = 0
             startOffset = 0
-            newEnd = end
             specialEnd = 0
 
             if isEncrypted:
@@ -331,69 +336,138 @@ class webGUI(BaseHTTPRequestHandler):
                 from resources.lib import  encryption
                 decrypt = encryption.encryption(self.server.cryptoSalt,self.server.cryptoPassword)
 
+                try:
+                    if xbmcplugin.playbackBuffer.playback[count]['length'] == -1:
+                        return
+                except:
+                    #for encrypted streams
+                    # need to fetch the last 16 bytes to calculate unpadded size
+                    if isEncrypted:
+                        req = urllib2.Request(url,  None,  { 'Cookie' : 'DRIVE_STREAM='+ cookie, 'Authorization' : auth})
+                        try:
+                            response = urllib2.urlopen(req)
+                        except urllib2.URLError, e:
+                            if e.code == 403 or e.code == 401:
+                                print "STILL ERROR"+str(e.code)+"\n"
+                                return
+                            else:
+                                return
+                        response.close()
+                        xbmcplugin.playbackBuffer.playback[count]['length'] =  response.info().getheader('Content-Length')
+
+                        req = urllib2.Request(url,  None,  { 'Cookie' : 'DRIVE_STREAM='+ cookie, 'Authorization' : auth, 'Range': 'bytes='+str(int(xbmcplugin.playbackBuffer.playback[count]['length']) - 16 - 8 )+'-'})
+                        try:
+                            response = urllib2.urlopen(req)
+                        except urllib2.URLError, e:
+                            if e.code == 403 or e.code == 401:
+                                print "STILL ERROR"+str(e.code)+"\n"
+                                return
+                            else:
+                                return
+                        CHUNK = 16 * 1024
+
+                        #originalSize = decrypt.decryptCalculateSizing(response)
+                        #print "size " + response.info().getheader('Content-Length') + ' vs ' + str(originalSize) + "\n"
+                        #return
+                        finalChunkDifference = decrypt.decryptCalculatePadding(response,chunksize=CHUNK)
+                        #xbmcplugin.playbackBuffer.playback[count]['length'] = int(xbmcplugin.playbackBuffer.playback[count]['length']) - finalChunkDifference
+                        xbmcplugin.playbackBuffer.playback[count]['decryptedlength'] = int(xbmcplugin.playbackBuffer.playback[count]['length']) - finalChunkDifference - 8
+                        newEnd = int(xbmcplugin.playbackBuffer.playback[count]['length'])- 1
+                        returnLength = int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])
+
+                        if constants.CONST.DEBUG:
+                            print "FINAL CHUNK SIZE DIFFERENCE " + str(finalChunkDifference) + "\n"
+                            print "length " +  str(xbmcplugin.playbackBuffer.playback[count]['length']) + "\n"
+                            print "decryptedlength " +  str(xbmcplugin.playbackBuffer.playback[count]['decryptedlength']) + "\n"
+
+                        response.close()
+
 
                 #
                 # 1) start > 16 bytes, back up to nearest whole chunk of 16
-                if ((start != '' and start > 16) and end == ''): # or end == (len -1)
+                if ((start != '' and start > 16) and (end == '' or end == int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 )): # or end == (len -1)
                     newEnd = int(xbmcplugin.playbackBuffer.playback[count]['length'])-1
-                    offset = (16-(newEnd - start +1) % 16)
-                    newStart = start - offset
+                    offset = (16-(newEnd - start + 8 +1) % 16)
+                    newStart = start - offset + 8#0
                     returnLength = int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength']) - start
-                    adjStart = 8 + offset
+                    skip = 0
+                    adjStart = offset #+8
                     adjEnd = 0
-                    print "[3] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ ' , offset=' +str(offset)+ ' , E*=' +str(newEnd) +', returnLength='+str(returnLength)+"\n"
+                    if constants.CONST.DEBUG:
+                        print "[3] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ' , E*=' +str(newEnd) +'('+str(adjEnd)+'), returnLength='+str(returnLength)+"\n"
                 # 2) start = 0, fetch all, return all
-                elif ( (start == 0 or start == '') and end == int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 ):
+                elif ( start == 0 and end != '' and end == int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 ):
                     finalChunkDifference = int(xbmcplugin.playbackBuffer.playback[count]['length']) - int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])
-                    newStart = start #=0
+                    newStart = 8 #=0
                     newEnd = int(xbmcplugin.playbackBuffer.playback[count]['length']) -1
                     returnLength = int(xbmcplugin.playbackBuffer.playback[count]['length']) - finalChunkDifference - 8
                     offset = 0
-                    adjStart = 8
-                    adjEnd = 0
-                    print "[2] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ ' , offset=' +str(offset)+ ' , E*=' +str(newEnd) +', returnLength='+str(returnLength)+"\n"
-                # staart = 0, end < length -1
-                elif ( (start == 0 or start == '') and end < int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 ):
-                    newStart = 8
-                    offset = (16 - (end - newStart + 1)%16)
-                    newEnd = end + 8 + offset
-                    returnLength = end - start + 1
                     adjStart = 0
-                    adjEnd = 8 + offset
-                    print "[4] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ ' , offset=' +str(offset)+ ' , E*=' +str(newEnd) +', returnLength='+str(returnLength)+"\n"
+                    adjEnd = 0
+                    if constants.CONST.DEBUG:
+                        print "[2] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ' , E*=' +str(newEnd) +'('+str(adjEnd)+'), returnLength='+str(returnLength)+"\n"
+                # staart = 0, end < length -1
+                elif ( start == 0 and end > 16 and end <= int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 ):
+                    newStart = 8#0
+                    offset = (16 - (end - newStart + 1)%16)
+                    newEnd = end + offset # +8
+                    returnLength = end - start + 1
+                    #skip = 8
+                    adjStart = 0
+                    adjEnd = offset#+8
+                    if constants.CONST.DEBUG:
+                        print "[4] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ' , E*=' +str(newEnd) +'('+str(adjEnd)+'), returnLength='+str(returnLength)+"\n"
 
                 #s > 0 e < len -1
-                elif (start != '' and start > 16 and end < int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 ):
-                    newStart = start + 8
-                    offset = 16 - (end - newStart + 1)%16
-                    newEnd = end + 8 + offset
-                    if newEnd > int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1:
-                        newEnd = end + 8
-                        offset = 16 - (neEnd - start + 1)%16
-                        newStart = stat - offset + 8
-                        adjStart = 8 + offset
-                        adjEnd = 0
-                    else:
-                        adjStart = 0
-                        adjEnd = 8 + offset
+                elif (start != '' and start > 16 and end <= int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1 ):
 
+                    newStart = start - (start%16) + 8
+                    #newStart = start + 8
+                    #offset = 16 - (end  - start + 1)%16
+                    #newEnd = end + offset + 8
+                    newEnd = end + (16- (end%16)) + 8 -1
+                    #if newEnd > int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])-1:
+                    #    newEnd = end + 8
+                    #    newStart = start - offset + 8
+                    #    adjStart = offset
+                    #    adjEnd = 0
+                    #else:
+                    #    adjStart = 0
+                    #    adjEnd = offset
+                    adjStart = start%16
+                    adjEnd = 16 - end%16 -1
+                    offset = 0
                     returnLength = end - start + 1
-                    print "[5] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ ' , offset=' +str(offset)+ ' , E*=' +str(newEnd) +', returnLength='+str(returnLength)+"\n"
+                    if constants.CONST.DEBUG:
+                        print "[5] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ' , E*=' +str(newEnd) +'('+str(adjEnd)+'), returnLength='+str(returnLength)+"\n"
                 # special case - end < 16 (such as first 2 bytes (apple)
                 elif (end < 16):
-                    newStart = 0
-                    newEnd = 16
+                    newStart = 8#0
+                    newEnd = 15 + 8
                     returnLength = 2
-                    adjStart = 8
+                    adjStart = 0#8
                     adjEnd = 14
-                    print "[1] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ ' , offset=' +str(offset)+ ' , E*=' +str(newEnd) +', returnLength='+str(returnLength)+"\n"
+                    offset = 0
+                    if constants.CONST.DEBUG:
+                        print "[1] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ' , E*=' +str(newEnd) +'('+str(adjEnd)+'), returnLength='+str(returnLength)+"\n"
+              #  elif start == "":
+              #      newStart = 8#0
+              #      adjStart = 0#8
+              #      adjEnd = 0
+              #      offset = 0
+              #      print "[0] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ", E*=TBD, returnLength=TBD\n"
+
                 else:
-                    newStart = 0
+                    newStart = 8#0
                     newEnd = int(xbmcplugin.playbackBuffer.playback[count]['length'])- 1
                     returnLength = int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])
-                    adjStart = 8
+                    adjStart = 0#8
                     adjEnd = 0
-            if start == '':
+                    offset = 0
+                    if constants.CONST.DEBUG:
+                        print "[0] S=" + str(start) + ', E=' + str(end) + ', S*='+str(newStart)+ '('+str(adjStart)+') , offset=' +str(offset)+ ' , E*=' +str(newEnd) +'('+str(adjEnd)+'), returnLength='+str(returnLength)+"\n"
+
+            if start == '' and not isEncrypted:
 #                req = urllib2.Request(url,  None,  { 'Cookie' : 'DRIVE_STREAM='+ cookie, 'Authorization' : auth})
                 req = urllib2.Request(url,  None,  { 'Cookie' : 'DRIVE_STREAM='+ cookie, 'Authorization' : auth})
             else:
@@ -408,42 +482,6 @@ class webGUI(BaseHTTPRequestHandler):
                 else:
                     return
 
-            # first fetch (no start specified, or 0)
-            if start == '':
-                xbmcplugin.playbackBuffer.playback[count]['length'] =  response.info().getheader('Content-Length')
-                #for encrypted streams
-                # need to fetch the last 16 bytes to calculate unpadded size
-                if isEncrypted:
-                    response.close()
-                    req = urllib2.Request(url,  None,  { 'Cookie' : 'DRIVE_STREAM='+ cookie, 'Authorization' : auth, 'Range': 'bytes='+str(int(xbmcplugin.playbackBuffer.playback[count]['length']) - 16 - 8 )+'-'})
-                    try:
-                        response = urllib2.urlopen(req)
-                    except urllib2.URLError, e:
-                        if e.code == 403 or e.code == 401:
-                            print "STILL ERROR"+str(e.code)+"\n"
-                            return
-                        else:
-                            return
-                    CHUNK = 16 * 1024
-
-                    #originalSize = decrypt.decryptCalculateSizing(response)
-                    #print "size " + response.info().getheader('Content-Length') + ' vs ' + str(originalSize) + "\n"
-                    #return
-                    finalChunkDifference = decrypt.decryptCalculatePadding(response,chunksize=CHUNK)
-                    #xbmcplugin.playbackBuffer.playback[count]['length'] = int(xbmcplugin.playbackBuffer.playback[count]['length']) - finalChunkDifference
-                    xbmcplugin.playbackBuffer.playback[count]['decryptedlength'] = int(xbmcplugin.playbackBuffer.playback[count]['length']) - finalChunkDifference - 8
-                    print "FINAL CHUNK SIZE DIFFERENCE " + str(finalChunkDifference) + "\n"
-                    print "length " +  str(xbmcplugin.playbackBuffer.playback[count]['length']) + "\n"
-                    print "decryptedlength " +  str(xbmcplugin.playbackBuffer.playback[count]['decryptedlength']) + "\n"
-                    req = urllib2.Request(url,  None,  { 'Cookie' : 'DRIVE_STREAM='+ cookie, 'Authorization' : auth})
-                    try:
-                        response = urllib2.urlopen(req)
-                    except urllib2.URLError, e:
-                        if e.code == 403 or e.code == 401:
-                            print "STILL ERROR"+str(e.code)+"\n"
-                            return
-                        else:
-                            return
 
 
             if start == '':
@@ -463,13 +501,17 @@ class webGUI(BaseHTTPRequestHandler):
             print str(response.info()) + "\n"
             self.send_header('Content-Type',response.info().getheader('Content-Type'))
             if isEncrypted:
-                self.send_header('Content-Range','bytes ' + str(start) + '-' + str(end) + '/' + str(returnLength))
-
+                if end == '':
+                    end = int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength']) - 1
+                if start == '':
+                    start = 0
+                self.send_header('Content-Range','bytes ' + str(start) + '-' + str(end) + '/' +  str(int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])))
+                if constants.CONST.DEBUG:
+                    print "SENDING =" + 'bytes ' + str(start) + '-' + str(end) + '/' + str( int(xbmcplugin.playbackBuffer.playback[count]['decryptedlength'])) + "\n"
                 #self.send_header('Content-Range', response.info().getheader('Content-Range'))
-                if response.info().getheader('Content-Range') != None:
+                if constants.CONST.DEBUG and response.info().getheader('Content-Range') != None:
                     print "received to process = " + response.info().getheader('Content-Range') + "\n"
 
-                print "received to process = " + response.info().getheader('Content-Length') + "\n"
             else:
                 self.send_header('Content-Range', response.info().getheader('Content-Range'))
                 #print "RANGE = " +  response.info().getheader('Content-Range') + "\n"
@@ -489,15 +531,13 @@ class webGUI(BaseHTTPRequestHandler):
 
             else:
                 CHUNK = 16 * 1024
-                count=0
-                hash_md5 = hashlib.md5()
                 while True:
                     chunk = response.read(CHUNK)
                     if not chunk:
                         break
                     self.wfile.write(chunk)
-                    hash_md5.update(chunk)
-                    print "HASH = " + str(hash_md5.hexdigest()) + "\n"
+                    if constants.CONST.DEBUG:
+                        print "HASH = " + str(hashlib.md5(chunk).hexdigest()) + "\n"
 
 
 
